{Network} Clean up the remaining SDKs within Network II (#25669)
* clean routeserver

* clean _completers.py

* clean natgateway

* move natgateway to network

* clean network __init__

* revert azure stack changes

* clean supported_api_version

* fix ci

* clean get_models

* clean min_api

* fix ci

* clean max_api

* resolve api version in arm template

* update document map

* refactoring

--- a/src/azure-cli/azure/cli/command_modules/network/tests/latest/recordings/test_natgateway_empty_create.yaml
+++ b/src/azure-cli/azure/cli/command_modules/network/tests/latest/recordings/test_natgateway_empty_create.yaml
@@ -1,7 +1,7 @@
 interactions:
 - request:
-    body: '{"location": "eastus2", "sku": {"name": "Standard"}, "zones": ["2"], "properties":
-      {"idleTimeoutInMinutes": 4}}'
+    body: '{"location": "eastus2", "properties": {"idleTimeoutInMinutes": 4}, "sku":
+      {"name": "Standard"}, "zones": ["2"]}'
     headers:
       Accept:
       - application/json
@@ -18,24 +18,23 @@ interactions:
       ParameterSetName:
       - --resource-group --name --location --idle-timeout --zone
       User-Agent:
-      - AZURECLI/2.39.0 azsdk-python-azure-mgmt-network/21.0.1 Python/3.10.6 (Linux-5.15.0-1017-azure-x86_64-with-glibc2.31)
-        VSTS_0fb41ef4-5012-48a9-bf39-4ee3de03ee35_build_4949_0
+      - AZURECLI/2.45.0 (PIP) (AAZ) azsdk-python-core/1.24.0 Python/3.8.10 (Windows-10-10.0.19045-SP0)
     method: PUT
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Network/natGateways/ng1?api-version=2022-01-01
   response:
     body:
       string: "{\r\n  \"name\": \"ng1\",\r\n  \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Network/natGateways/ng1\",\r\n
-        \ \"etag\": \"W/\\\"4f49a358-b4bd-48a2-99cd-093a1c974cc3\\\"\",\r\n  \"type\":
+        \ \"etag\": \"W/\\\"fbd1f02b-8b9f-4272-9fff-a3beab2a3c35\\\"\",\r\n  \"type\":
         \"Microsoft.Network/natGateways\",\r\n  \"location\": \"eastus2\",\r\n  \"zones\":
         [\r\n    \"2\"\r\n  ],\r\n  \"properties\": {\r\n    \"provisioningState\":
-        \"Updating\",\r\n    \"resourceGuid\": \"2655aa22-c072-4493-bcb1-8e1481ca113b\",\r\n
+        \"Updating\",\r\n    \"resourceGuid\": \"3a284a98-eea0-4d66-857e-b586db061e2f\",\r\n
         \   \"idleTimeoutInMinutes\": 4\r\n  },\r\n  \"sku\": {\r\n    \"name\": \"Standard\",\r\n
         \   \"tier\": \"Regional\"\r\n  }\r\n}"
     headers:
       azure-asyncnotification:
       - Enabled
       azure-asyncoperation:
-      - https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/eastus2/operations/ca2f74b7-9580-4b19-b287-a41105d51856?api-version=2022-01-01
+      - https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/eastus2/operations/c3e4b05a-4423-4d25-a198-a8d609a108ec?api-version=2022-01-01
       cache-control:
       - no-cache
       content-length:
@@ -43,7 +42,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Fri, 26 Aug 2022 07:36:27 GMT
+      - Sat, 04 Mar 2023 06:44:09 GMT
       expires:
       - '-1'
       pragma:
@@ -56,7 +55,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-arm-service-request-id:
-      - ab476473-519f-4ee1-9b5c-6ed51fcdc8ad
+      - 29ffbd8a-219a-4501-ae55-d28b2760ba28
       x-ms-ratelimit-remaining-subscription-writes:
       - '1199'
     status:
@@ -76,10 +75,9 @@ interactions:
       ParameterSetName:
       - --resource-group --name --location --idle-timeout --zone
       User-Agent:
-      - AZURECLI/2.39.0 azsdk-python-azure-mgmt-network/21.0.1 Python/3.10.6 (Linux-5.15.0-1017-azure-x86_64-with-glibc2.31)
-        VSTS_0fb41ef4-5012-48a9-bf39-4ee3de03ee35_build_4949_0
+      - AZURECLI/2.45.0 (PIP) (AAZ) azsdk-python-core/1.24.0 Python/3.8.10 (Windows-10-10.0.19045-SP0)
     method: GET
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/eastus2/operations/ca2f74b7-9580-4b19-b287-a41105d51856?api-version=2022-01-01
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/eastus2/operations/c3e4b05a-4423-4d25-a198-a8d609a108ec?api-version=2022-01-01
   response:
     body:
       string: "{\r\n  \"status\": \"Succeeded\"\r\n}"
@@ -91,7 +89,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Fri, 26 Aug 2022 07:36:37 GMT
+      - Sat, 04 Mar 2023 06:44:19 GMT
       expires:
       - '-1'
       pragma:
@@ -108,7 +106,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-arm-service-request-id:
-      - d8a08ef3-0216-494e-9a9e-a5838e7d5591
+      - af71f0be-6601-49f2-b099-449f23134ffe
     status:
       code: 200
       message: OK
@@ -126,17 +124,16 @@ interactions:
       ParameterSetName:
       - --resource-group --name --location --idle-timeout --zone
       User-Agent:
-      - AZURECLI/2.39.0 azsdk-python-azure-mgmt-network/21.0.1 Python/3.10.6 (Linux-5.15.0-1017-azure-x86_64-with-glibc2.31)
-        VSTS_0fb41ef4-5012-48a9-bf39-4ee3de03ee35_build_4949_0
+      - AZURECLI/2.45.0 (PIP) (AAZ) azsdk-python-core/1.24.0 Python/3.8.10 (Windows-10-10.0.19045-SP0)
     method: GET
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Network/natGateways/ng1?api-version=2022-01-01
   response:
     body:
       string: "{\r\n  \"name\": \"ng1\",\r\n  \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Network/natGateways/ng1\",\r\n
-        \ \"etag\": \"W/\\\"972298ea-2cd9-4be3-9e91-6be159aa1e78\\\"\",\r\n  \"type\":
+        \ \"etag\": \"W/\\\"f80caace-a987-4280-9cf7-1f125e42b672\\\"\",\r\n  \"type\":
         \"Microsoft.Network/natGateways\",\r\n  \"location\": \"eastus2\",\r\n  \"zones\":
         [\r\n    \"2\"\r\n  ],\r\n  \"properties\": {\r\n    \"provisioningState\":
-        \"Succeeded\",\r\n    \"resourceGuid\": \"2655aa22-c072-4493-bcb1-8e1481ca113b\",\r\n
+        \"Succeeded\",\r\n    \"resourceGuid\": \"3a284a98-eea0-4d66-857e-b586db061e2f\",\r\n
         \   \"idleTimeoutInMinutes\": 4\r\n  },\r\n  \"sku\": {\r\n    \"name\": \"Standard\",\r\n
         \   \"tier\": \"Regional\"\r\n  }\r\n}"
     headers:
@@ -147,9 +144,9 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Fri, 26 Aug 2022 07:36:37 GMT
+      - Sat, 04 Mar 2023 06:44:20 GMT
       etag:
-      - W/"972298ea-2cd9-4be3-9e91-6be159aa1e78"
+      - W/"f80caace-a987-4280-9cf7-1f125e42b672"
       expires:
       - '-1'
       pragma:
@@ -166,8 +163,8 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-arm-service-request-id:
-      - 8645e37e-d62e-4da7-a3b9-a87d3979b50b
+      - edb4d0fa-3f44-40c3-80c4-c2269427c14f
     status:
       code: 200
-      message: ''
+      message: OK
 version: 1
