--- a/.azure-pipelines/templates/automation_test.yml
+++ b/.azure-pipelines/templates/automation_test.yml
@@ -26,7 +26,7 @@ parameters:
 - name: jobName
   displayName: Job name
   type: string
-  default: 'FullTest'
+  default: ''
 
 steps:
   - task: UsePythonVersion@0
